# nn

./: Makefile  README.md  index.html  pyproject.toml
db/: bookmarks.sqlite
docs/: 2016.html  2017.html  2018.html  2019.html  2020.html  2021.html  2022.html  2023.html  2024.html  about.txt  index.html
nn/: cli.py  crawl.py  db.py  events.py  pocket.py  srl.py
templates/: archive.html  events.html  nn.html
