[tool.poetry]
name = "nn"
version = "0.1.0"
description = ""
authors = ["Marc Kirchner <mail@marc-kirchner.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
jinja2 = "^3.1.4"
rich = "^13.7.1"

[tool.poetry.scripts]
nn = "nn.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
